[package]
name = "synk"
version = "0.1.0"
edition = "2021"

[target.'cfg(any(target_os = "linux", target_os = "android", traget_os = "freebsd"))'.dependencies]
libc = "0.2.152"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_WindowsProgramming",
] }
